[package]
name = "macroquad-shimlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
libshim = {path = "../shimlang/libshim"}
acollections = {path = "../shimlang/acollections"}
tally-ho = {path = "../shimlang/tally-ho"}
